--- a/user.html
+++ b/user.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="app.js"></script>
+    <script src="./number.js"></script>
 </head>
 <body>
     <h1>User File</h1>
